# Boulder

./: .gitignore  README.md  project.yml
.github/workflows/: windows-build.yml
App/: AppDelegate.swift  Boulder.entitlements  BoulderApp.swift
App/Features/: BlockedApp.swift  BoulderConfig.swift  BoulderRenderer.swift  BoulderShape.swift  BoulderState.swift  BoulderStore.swift  BoulderSync.swift  FocusBlocker.swift  FocusLockoutWindow.swift  FocusSession.swift  FocusTag.swift  FocusType.swift  MenubarIcon.swift  MountainRangeView.swift  ReleaseCeremonyView.swift
App/Helpers/: BoulderShareEncoder.swift  Persistence.swift  QRCodeImage.swift  UpdaterController.swift
App/Views/: CalendarHeatmapView.swift  OnboardingView.swift  PairDeviceSheet.swift  PopoverContentView.swift  SettingsView.swift  StatsView.swift  TagEditorView.swift
Widget/: BoulderWidget.entitlements  BoulderWidget.swift  BoulderWidgetBundle.swift  Info.plist
scripts/: build-dmg.sh  build.sh  make-icon.sh  release.sh
trailer/: package-lock.json  package.json  tsconfig.json
trailer/src/: BoulderTrailer.tsx  Root.tsx
website/: _redirects  app.js  appcast.xml  index.html  r.html  share-renderer.js  styles.css  wrangler.jsonc
website/app/: app.css  app.js  index.html
website/community/: community.js  index.html
website/g/: group.js  index.html
website/r/: index.html
windows-app/: .gitignore  README.md  package.json  tsconfig.json
windows-app/src/: index.html  main.ts  styles.css
windows-app/src-tauri/: Cargo.toml  tauri.conf.json
windows-app/src-tauri/src/: blocker.rs  main.rs
(+4 files in other folders)
