[package]
name = "boulder"
version = "0.1.0"
description = "Boulder — pet rock for your focus (Windows)"
authors = ["Ben Burnette"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# A Cargo feature so we can disable updater calls for offline dev builds.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
